WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190202
REGRESSION(
r236154
) Page loads are not drawn when loaded in shipped Safari11/12
https://bugs.webkit.org/show_bug.cgi?id=190202
Summary
REGRESSION(r236154) Page loads are not drawn when loaded in shipped Safari11/12
youenn fablet
Reported
2018-10-02 08:50:50 PDT
After this revision, page loads are hanging on previous Safari version. This was reported for Safari high Sierra and Safari Mojave. I bissected the issue with WebKit Nightlies to
http://trac.webkit.org/r236153
Attachments
Patch
(1.76 KB, patch)
2018-10-05 14:15 PDT
,
Alex Christensen
youennf
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2018-10-02 08:55:29 PDT
I have this problem on High Sierra and I am seeing: ./Tools/Scripts/run-safari --no-saved-state Starting SafariForWebKitDevelopment with DYLD_FRAMEWORK_PATH set to point to built WebKit in /Users/rwlbuis/WebKit/WebKitBuild/Release. Failed to acquire exclusive access to AutoFill corrections SQLite store at AutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at CloudAutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at AutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at CloudAutoFillCorrections.db. 2018-10-02 17:55:14.088 SafariForWebKitDevelopment[50142:289352] It's not legal to call -layoutSubtreeIfNeeded on a view which is already being laid out. If you are implementing the view's -layout method, you can call -[super layout] instead. Break on void _NSDetectedLayoutRecursion(void) to debug. This will be logged only once. This may break in the future. Failed to acquire exclusive access to AutoFill corrections SQLite store at AutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at CloudAutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at AutoFillCorrections.db. Failed to acquire exclusive access to AutoFill corrections SQLite store at CloudAutoFillCorrections.db. 2018-10-02 17:55:14.509 SafariForWebKitDevelopment[50142:289430] AOSKit ERROR: XPC CLIENT: Unauthorized client error received
Rob Buis
Comment 2
2018-10-02 08:57:06 PDT
Also on my system are stock Safari Version 11.1.2 (13605.3.8) and Xcode Version 9.4.1 (9F2000).
Alex Christensen
Comment 3
2018-10-02 09:32:42 PDT
Interesting. Can this reproduce with the latest?
youenn fablet
Comment 4
2018-10-02 09:35:32 PDT
(In reply to Alex Christensen from
comment #3
)
> Interesting. Can this reproduce with the latest?
It was reported in Mojave latest Safari.
Alex Christensen
Comment 5
2018-10-02 09:36:32 PDT
I mean with the latest WebKit. Also, can it reproduce with local builds of WebKit?
Chris Dumez
Comment 6
2018-10-02 09:37:35 PDT
(In reply to Alex Christensen from
comment #5
)
> I mean with the latest WebKit. > Also, can it reproduce with local builds of WebKit?
This is the bug, it happens if you use a recent locally built WebKit with the System's Safari.
Chris Dumez
Comment 7
2018-10-02 09:46:34 PDT
Does it require building WebKit with an external SDK?
Rob Buis
Comment 8
2018-10-02 09:53:53 PDT
(In reply to Alex Christensen from
comment #5
)
> I mean with the latest WebKit. > Also, can it reproduce with local builds of WebKit?
Yes, I built
r236716
today for my test.
Alex Christensen
Comment 9
2018-10-05 14:15:08 PDT
Created
attachment 351698
[details]
Patch
youenn fablet
Comment 10
2018-10-05 14:20:10 PDT
Comment on
attachment 351698
[details]
Patch Are we missing some API tests to catch these kind of regressions?
Alex Christensen
Comment 11
2018-10-05 14:40:53 PDT
(In reply to youenn fablet from
comment #10
)
> Comment on
attachment 351698
[details]
> Patch > > Are we missing some API tests to catch these kind of regressions?
Technically yes, but we are in the process of removing all this SPI.
http://trac.webkit.org/r236886
Radar WebKit Bug Importer
Comment 12
2018-10-05 14:41:29 PDT
<
rdar://problem/45055789
>
Chris Dumez
Comment 13
2018-10-05 15:27:23 PDT
Comment on
attachment 351698
[details]
Patch Seems like we could have very easily written an API test for this.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug